--- a/css/index.css
+++ b/css/index.css
@@ -151,3 +151,111 @@ ul {
     color: var(--main-color-alt);
 }
 /* End Landing */
+/* Start Products */
+.products {
+    padding-top: var(--main-padding-top);
+    padding-bottom: var(--main-padding-bottom);
+    position: relative;
+}
+.products .container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 40px;
+}
+.products .box {
+    -webkit-box-shadow: 0 2px 15px rgb(0 0 0 / 10%);
+    -moz-box-shadow: 0 2px 15px rgb(0 0 0 / 10%);
+    box-shadow: 0 2px 15px rgb(0 0 0 / 10%);
+    background-color: white;
+    border-radius: 6px;
+    overflow: hidden;
+    transition: transform var(--main-transition), box-shadow var(--main-transition);
+}
+.products .box:hover {
+    transform: translateY(-10px);
+    -webkit-box-shadow: 0 2px 15px rgb(0 0 0 / 20%);
+    -moz-box-shadow: 0 2px 15px rgb(0 0 0 / 20%);
+    box-shadow: 0 2px 15px rgb(0 0 0 / 20%);
+}
+.products .box img {
+    width: 100%;
+    max-width: 100%;
+    height: 162.46px;
+}
+.products .box .content {
+    padding: 20px;
+}
+.products .box .content h3 {
+    margin: 0;
+}
+.products .box .content p {
+    margin: 10px 0 0;
+    line-height: 1.5;
+    color: #777;
+}
+.products .box .info {
+    padding: 20px;
+    border-top: 1px solid #e6e6e7;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.products .box .info a {
+    color: var(--main-color);
+    font-weight: bold;
+}
+.products .box .info i {
+    color: var(--main-color);
+    font-size: 15px;
+}
+.products .box:hover .info i {
+    animation: moving-arrow 0.6s linear infinite;
+}
+
+.add-product {
+    width: 500px;
+    margin: 50px auto;
+    padding: 20px;
+    background: #f8f8f8;
+    border-radius: 10px;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+label {
+    margin: 10px 0 5px;
+    font-weight: bold;
+}
+
+input,
+#category {
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+input:focus {
+    border-color: #007bff;
+    outline: none;
+}
+
+button {
+    margin-top: 15px;
+    padding: 10px;
+    font-size: 16px;
+    font-weight: bold;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.edit, .delete {
+    margin: 0 0 10px 10px;
+}
+
+/* End Products */
